_config.yml update

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ collections:
     permalink: /:name
   projects:
     output: true
-    permalink: /project/:slug
+    permalink: /:slug
 
 defaults:
   -
