--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -166,7 +166,7 @@ font_settings:
 
 advanced_settings:
   ajax_loading: true
-  analytics_code: ""
+  analytics_code: "G-CSPP4756F8"
   custom_styles: ""
   header_js: ""
   footer_js: ""
